--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@xenova/transformers": "^2.17.2",
     "autoprefixer": "^10.4.22",
     "framer-motion": "^12.23.24",
     "postcss": "^8.5.6",
